# nomad_in_go2

./: CMakeLists.txt  README.md  package.xml
include/common/: ros2_sport_client.h
launch/: MLplanner.launch.py
model/config/: nomad_nuplan_lightning.yaml
model/diffusion_policy/: conditional_unet1d.py
model/nomad/: base_module.py  nomad.py  nomad_gps.py
rviz/: planner.rviz
scripts/: goal_tf.py  img_puber.py  planner.py  test_tracker.py
src/: custom_joy_stick.cpp  ego_state.cpp  follow_traj.cpp  sport_mode_ctrl.cpp
src/common/: ros2_sport_client.cpp
utils/: transformation.py
